# Picofly

./: README.md
Firmwares/: Readme.md  changelog.md  errorcodes.md  fw_2.5_nw_toshiba_fix.uf2  fw_2.66.uf2  fw_2.72.uf2  fw_2.73.uf2  fw_2.74.uf2
Firmwares/Archived/: PiCoFly FW2.5+unlock.uf2  archived.md  fw_2.61.uf2  fw_2.64.uf2  fw_2.65.uf2  fw_2.67.uf2  fw_2.6_alpha_b91694d8.uf2  unlock.uf2  update.bin.266
Firmwares/unlock/: Readme.md
code/: 2.6 pio code  readme.md
code/busk/: CMakeLists.txt  README.md  crc.c  firmware.h  main.c  pins.h
code/usk/: CMakeLists.txt  README.md  board_detect.c  board_detect.h  boot_detect.c  boot_detect.h  config.c  config.h  emmc.pio  fuses.c  fuses.h  glitch.c  glitch.h  main.c  mariko_bct.h  misc.c  misc.h  mmc_defs.h  payload.c  payload.h  pins.h  pio_upload.c  pio_upload.h  prepare.py  ws2812.pio
code/usk/.github/workflows/: build.yml
